# UCSP

./: .gitignore  README.md  TODO.md  Thesis-UCSP.cabal  publish-pdf.el  publishPdf
code/AUCSP/: CoherenceManipulations.md  TODO.md  Thesis-AUCSP.cabal
code/AUCSP-Impl/: LICENSE  README.md  TODO.md  Thesis-AUCSP-impl.cabal
code/AUCSP-Impl/src/AUCSP/Agent/: AgentState.hs  AgentState.lhs  GroupNegotiator.hs  Messages.hs  NegotiatingAgent.hs  NegotiatingAgent.lhs  NegotiationEnvironment.hs  Predef0.hs  ProfessorNegotiator.hs  SharedSchedule.hs
code/AUCSP-Impl/src/AUCSP/Agent/NegotiatingAgent/: Decide.hs  Descriptor.hs  DisciplinePriority.hs  HandleNegotiation.hs  NegotiationDefinition.hs  Roles.hs  SearchCandidates.hs  State.hs
code/AUCSP-Impl/src/AUCSP/Agent/NegotiationEnvironment/: Controller.hs  Integration.hs
code/AUCSP-Impl/src/AUCSP/Agent/Negotiator/: DisciplinePriority.hs  Group.hs  Opinion.hs  Professor.hs
code/AUCSP-Impl/src/AUCSP/Agent/Run/: Data.hs  Main.hs
code/AUCSP-Impl/src/AUCSP/Agent/SharedSchedule/: Interface.hs  Internal.hs  Observer.hs
code/AUCSP-Impl/src/AUCSP/Agent/SharedSchedule/Internal/: Messages.hs  ObserverImpl.hs  RoomScheduleHolder.hs
code/AUCSP/src/AUCSP/: AgentsInterface.lhs  Classes.hs  Classes.lhs  Coherence.lhs  Context.hs  Context.lhs  Contexts.hs  NegotiationRoles.lhs
code/AUCSP/src/AUCSP/AgentsInterface/: KnownAgents.hs  RoleData.hs
code/AUCSP/src/AUCSP/Classes/: CoresGeneration.hs  DiscreteTime.hs  Generation.hs
code/AUCSP/src/AUCSP/Coherence/: Relations.lhs
code/AUCSP/src/AUCSP/Context/: Beliefs.lhs  Capabilities.lhs  External.hs  External.lhs  Obligations.hs  Preferences.hs
code/AUCSP/src/AUCSP/Utils/: InInterval.hs  InUnitInterval.hs  List.hs  Random.hs
code/AUCSP/src/CSP/: Coherence.hs
code/AUCSP/src/CSP/Coherence/: Candidate.hs  Context.hs  Information.hs
code/AUCSP/src/CSP/Coherence/Context/: Filtering.hs
code/AUCSP/src/CSP/Coherence/Context/Filtering/: Convert.hs
code/AUCSP/src/Document/: Abstract.tex  Introduction.tex  Title.tex
code/AUCSP/src/Document/tikz/: Capabilities-Standalone.tex  Capabilities.tex
doc/: 1-Introduction.tex  2-CSP.tex  3-Agents.tex  4-Coherence.tex  5-FormalProblem.tex  5-Solution.tex  6-Solution.tex  6-TestResults.tex  7-Improvements.tex  7-TestResults.tex  8-Improvements.tex  Abstract.tex  Acknowledgement.tex  Agent.tex  Agents.tex  AgentsImpl.tex  CSP.tex  Coherence.tex  Conclusions.tex  Dedication.tex  FormalProblem.tex  Improvements.tex  Introduction.tex  MathDefs.tex  Problem.tex  ProposedSolution.tex  References.bib  Solution.tex  SolutionOLD.tex  TODO.md  TestResults.tex  ThesisDoc.tex  header.tex  phdThesisFormat.sty  references.bib
doc/Agents/: MAS-UCSP.tex  NQueenWCS.tex  SolvingCSPs.tex
doc/CSP/: Definition.tex  Formal.tex  GA-Color-Graph.tex  GA-UCSP.tex  GA.tex  HyperHeuristic.tex  QGA.tex
doc/Coherence/: ClassCoherence.tex  ExternalCoherence.tex  InternalCoherence.tex
doc/Improvements/: Timetable-current.tex  Timetable-high-discr.tex  Timetable-spaces.tex
doc/Introduction/: ScheduleSpace.tikz.tex
doc/Solution/: Agent.tex  CandidateNegotiation.tex  Contexts.tex  FormalProblem.tex
doc/Solution/Agent/: Group.tex  Professor.tex  Schedule.tex
doc/Solution/Contexts/: ClassCoherence.tex  ExternalCoherence.tex  InternalCoherence.tex
doc/TestResults/: PersonalSolution.lib.tex  Results.tex  TestData.tex
doc/TestResults/Results/: Group-Bad-1A.tex  Group-Best-2A.tex  Group-Best-4B.tex  Group-So-So-5A.tex  Prof-11.tex  Prof-4.tex
doc/TestResults/TestData/: Classrooms.tex  Disciplines.tex  Groups-Personal.tex  Groups-Static.tex  Professors-Personal.tex  Professors-Static.tex  Requirements.tex
doc/img/: CandidateNegotiation.tikz.tex  Capabilities.tikz.tex  ConnectionMatrix.tikz.tex  Contexts.tikz.tex  NQueens.tikz.lib.tex  ScheduleHypercube.tikz.tex  SolutionProcess-content.tikz.tex  SolutionProcess.tikz.tex  TimeIntersects.tikz.tex
doc/img/ColorMap/: CEUMapGraph.tikz.lib.tex  CEUMapGraph.tikz.tex
doc/img/ConnectionMatrix/: Candidates-content.tikz.tex  Candidates.tikz.tex  Conflict-content.tikz.tex  Conflict.tikz.tex  ConflictDeepCoherence.tikz.lib.tex  ConflictDeepCoherence.tikz.tex  DeepCoherence.tikz.tex  ExternalCoherence.tikz.tex
doc/img/ConnectionMatrix2/: WithComments.tikz.tex  WithStudents.tikz.tex  WithStudentsAndRooms-content.tikz.tex  WithStudentsAndRooms.tikz.tex
doc/img/Document/: Capabilities.tex
doc/img/NQueens/: Restrictions-content.tikz.tex  Restrictions.tikz.tex  Solve-4-Queens.tikz.lib.tex  Solve-4-Queens.tikz.tex
doc/img/ScheduleHypercube/: GRPT-content.tikz.tex  GRPT.tikz.tex  SGRPT-content.tikz.tex  (+5 more)
doc_old/: AgentGeneric.tex  AgentImpl.tex  Coherence.tex  CoherenceBasedAgents.tex  references.bib
doc_old/Coherence/: ExternalCoherence.tex
images/: ClassCoreGraph.alone.tex  ParticipantsSpace_candidate_1.allpng.sh  ParticipantsSpace_candidate_1.png.sh  ParticipantsSpace_candidate_1.tikz.alone.tex  ParticipantsSpace_candidate_1.tikz.tex  ParticipantsSpace_candidate_2.allpng.sh  ParticipantsSpace_candidate_2.png.sh  ParticipantsSpace_candidate_2.tikz.alone.tex  ParticipantsSpace_candidate_2.tikz.tex  ParticipantsSpace_planes.tikz.alone.tex  ParticipantsSpace_points.tikz.alone.tex  RoomDayTime.allpng.sh  RoomDayTime.png.sh  RoomDayTime.tikz.alone.tex  RoomDayTime.tikz.tex  tex2png.sh
images/utils/: plotPoint3.tex
presentation/: 3-Definition.tex  6-Agent-Roles.tex  7-Results.tex  8-Improvements.tex  Part-1.tex  Part-2.tex  Part-3.tex  Part-4.tex  Part-5.tex  ThesisPresentation.tex
presentation/Agent-Roles/: 1-Group.tex
src/: Agent.hs  BeliefsNewProposal.tikz.tex  ContextAssess.tikz.tex  Document.lhs  Extra.hs  GenericAgent.hs  GenericAgent.lhs
src/AUCSP/: AgentsInterface.lhs  Classes.lhs  Context.lhs  Contexts.hs  NegotiatingAgent.lhs  NegotiationEnvironment.lhs  NegotiationRoles.lhs  NegotiationStates.lhs
src/Agent/: Abstract.lhs  AgentSystem.lhs  Ask.hs  Controller.lhs  Manager.hs
src/Document/: AUCSP.lhs  Header.tex  Implementation.lhs  format.fmt
src/GenericAgent/: AgentImpl.hs
test/GenericAgent/: Test.hs
(+43 files in other folders)
