name:           Thesis-UCSP
version:        0.1.0.0
cabal-version:  >=1.10
build-type:     Simple
license:        MIT
license-file:   LICENSE
maintainer:     kdn.kovalev@gmail.com
homepage:       -
synopsis:       Thesis
author:         Dmitry K.
extra-source-files:
    Document.lhs
    Document/*.lhs
    Document/*.tex
    Document/tikz/*.tex

library
    exposed-modules:

        Agent
        Agent.Abstract
        Agent.Extra
        Agent.Manager
        Agent.Ask
        Agent.Controller

        AUCSP.Classes
        AUCSP.NegotiationRoles
        AUCSP.Coherence
        AUCSP.Coherence.Information
        AUCSP.Coherence.Relations
        AUCSP.Context
        AUCSP.Context.Combine
        AUCSP.Context.InUnitInterval
        AUCSP.Context.Capabilities
        AUCSP.Context.Beliefs
        AUCSP.Context.Obligations
        AUCSP.Context.Preferences
        AUCSP.Context.External
        AUCSP.Contexts
        AUCSP.NegotiatingAgent
        AUCSP.NegotiationEnvironment
        AUCSP.NegotiationStates

        AUCSP.Test.TestData01

    build-depends:
        base >=4.8 && <4.9,
        containers >=0.5,
        stm ==2.4.4.*

    default-language: Haskell2010
    default-extensions: MultiParamTypeClasses FunctionalDependencies
                        ExistentialQuantification TypeFamilies DataKinds FlexibleContexts
                        FlexibleInstances UndecidableInstances RankNTypes ConstraintKinds
                        TypeOperators PolyKinds ScopedTypeVariables
    hs-source-dirs: src
--    other-modules:


executable test-env-01
    hs-source-dirs: test
    main-is: AUCSP/Test/Environment01.lhs
    build-depends:
        Thesis-UCSP -any,
        base >=4.8 && <4.9,
        containers >=0.5
    default-language: Haskell2010
    default-extensions: MultiParamTypeClasses FlexibleInstances TypeFamilies FlexibleContexts
--    other-modules: Agent.Test.Environment01.


executable run-ping-pong
    hs-source-dirs: test
    main-is: Agent/Test/RunPingPong.hs
    build-depends:
        Thesis-UCSP -any,
        base >=4.8 && <4.9,
        hspec -any
    default-language: Haskell2010

test-suite test-generic-agent
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Agent/Test.hs
    build-depends:
        Thesis-UCSP -any,
        base >=4.8 && <4.9,
        hspec -any
    default-language: Haskell2010
    other-modules:
        Agent.Test.PingPong
        Agent.Test.PingPongAgentsSend
        Agent.Test.PingPongAgentsAsk
        Agent.Test.PingPongAgentsAsk2
