name:           Thesis-AUCSP-impl
version:        0.1.0.0
cabal-version:  >=1.10
build-type:     Simple
license:        MIT
license-file:   LICENSE
maintainer:     kdn.kovalev@gmail.com
homepage:       -
synopsis:       Thesis
author:         Dmitry K.
-- extra-source-files:

library
    exposed-modules:
        AUCSP.Agent.AgentState
        AUCSP.Agent.NegotiatingAgent
        AUCSP.Agent.NegotiatingAgent.NegotiationDefinition
        AUCSP.Agent.NegotiatingAgent.SearchCandidates
        AUCSP.Agent.NegotiatingAgent.Decide
        AUCSP.Agent.NegotiatingAgent.HandleNegotiation
        AUCSP.Agent.NegotiationEnvironment
        AUCSP.Agent.NegotiationEnvironment.Integration
        AUCSP.Agent.NegotiationEnvironment.Controller


    build-depends:
        base >=4.9 && <4.10,
        Thesis-AUCSP -any,
        feh-agents >= 0.0.3.0,
        stm ==2.4.4.*,
        containers ==0.5.*
        -- time == 1.7.*

    default-language: Haskell2010
    hs-source-dirs: src
--    other-modules:


-- executable test-env-01
--     hs-source-dirs: test
--     main-is: AUCSP/Test/Environment01.lhs
--     build-depends:
--         base >=4.9 && <4.10
--         Thesis-UCSP,
--         feh-agents ==0.0.1.*,
--         -- containers >=0.5,
--         -- time == 1.7.*
--     default-language: Haskell2010
