name:           Thesis-AUCSP-impl
version:        0.1.1.0
cabal-version:  >=1.10
build-type:     Simple
license:        MIT
license-file:   LICENSE
maintainer:     kdn.kovalev@gmail.com
homepage:       -
synopsis:       Thesis
author:         Dmitry K.
-- extra-source-files:

library
    exposed-modules:
        AUCSP.Agent.Predef0
        AUCSP.Agent.SharedSchedule.Interface
        AUCSP.Agent.SharedSchedule.Observer
        AUCSP.Agent.SharedSchedule
        AUCSP.Agent.NegotiatingAgent.State
        AUCSP.Agent.NegotiatingAgent.Roles
        AUCSP.Agent.NegotiatingAgent.Descriptor
        AUCSP.Agent.NegotiatingAgent
        AUCSP.Agent.NegotiationEnvironment.Integration
        AUCSP.Agent.NegotiationEnvironment.Controller
        AUCSP.Agent.NegotiationEnvironment
        AUCSP.Agent.Negotiator.DisciplinePriority
        AUCSP.Agent.Negotiator.Group
        -- AUCSP.Agent.NegotiatorProfessor


    build-depends:
        base >=4.9 && <4.10,
        Thesis-AUCSP -any,
        feh-agents >= 0.0.4.3,
        stm ==2.4.4.*,
        containers ==0.5.*
        -- time == 1.7.*

    default-language: Haskell2010
    hs-source-dirs: src
   other-modules:
        AUCSP.Agent.SharedSchedule.Internal.Messages
        AUCSP.Agent.SharedSchedule.Internal.ObserverImpl
        AUCSP.Agent.SharedSchedule.Internal.RoomScheduleHolder

executable test-run
  hs-source-dirs: src
  main-is: AUCSP/Agent/Run/Main.hs
  build-depends:
      base >=4.9 && <4.10,
      Thesis-AUCSP-impl,
      Thesis-AUCSP,
      feh-agents,
      containers,
      stm


-- executable test-env-01
--     hs-source-dirs: test
--     main-is: AUCSP/Test/Environment01.lhs
--     build-depends:
--         base >=4.9 && <4.10
--         Thesis-UCSP,
--         feh-agents ==0.0.1.*,
--         -- containers >=0.5,
--         -- time == 1.7.*
--     default-language: Haskell2010
