name:           Thesis-AUCSP
version:        0.1.0.0
cabal-version:  >=1.10
build-type:     Simple
license:        MIT
license-file:   LICENSE
maintainer:     kdn.kovalev@gmail.com
homepage:       -
synopsis:       Thesis
author:         Dmitry K.
extra-source-files:
    Document.lhs
    Document/*.lhs
    Document/*.tex
    Document/tikz/*.tex

library
    exposed-modules:
        AUCSP.NegotiationRoles
        AUCSP.AgentsInterface
        AUCSP.Classes
        AUCSP.Coherence
        AUCSP.Coherence.Information
        AUCSP.Coherence.Relations
        AUCSP.Context
        AUCSP.Context.Combine
        AUCSP.Context.InUnitInterval
        AUCSP.Context.Capabilities
        AUCSP.Context.Beliefs
        AUCSP.Context.Obligations
        AUCSP.Context.Preferences
        AUCSP.Context.External
        AUCSP.Contexts

    build-depends:
        base >=4.9 && <4.10,
        containers ==0.5.*

    default-language: Haskell2010
    default-extensions: MultiParamTypeClasses FunctionalDependencies
                        ExistentialQuantification TypeFamilies DataKinds FlexibleContexts
                        FlexibleInstances UndecidableInstances RankNTypes ConstraintKinds
                        TypeOperators PolyKinds ScopedTypeVariables NamedFieldPuns
                        GeneralizedNewtypeDeriving TupleSections
    hs-source-dirs: src
--    other-modules:
