name:           Thesis-AUCSP
version:        0.1.1.0
cabal-version:  >=1.10
build-type:     Simple
license:        MIT
license-file:   LICENSE
maintainer:     kdn.kovalev@gmail.com
homepage:       -
synopsis:       Thesis
author:         Dmitry K.
extra-source-files:
    Document.lhs
    Document/*.lhs
    Document/*.tex
    Document/tikz/*.tex
    TODO.md
    CoherenceManipulations.md

library
    exposed-modules:
        CSP.Coherence
        CSP.Coherence.Information
        CSP.Coherence.Context
        CSP.Coherence.Context.Filtering
        CSP.Coherence.Context.Filtering.Convert
        CSP.Coherence.Candidate

        AUCSP.NegotiationRoles
        AUCSP.AgentsInterface
        AUCSP.AgentsInterface.KnownAgents
        AUCSP.AgentsInterface.RoleData

        AUCSP.Classes
        AUCSP.Classes.DiscreteTime
        AUCSP.Classes.CoresGeneration
        AUCSP.Classes.Generation

        AUCSP.Context
        AUCSP.Context.Obligations
        AUCSP.Context.Preferences
        AUCSP.Context.External
        AUCSP.Contexts

        AUCSP.Utils.InInterval

    build-depends:
        base >=4.9 && <4.10,
        containers ==0.5.*,
        random ==1.1

    default-language: Haskell2010
    other-extensions: ExistentialQuantification TypeFamilies MultiParamTypeClasses
                      FunctionalDependencies KindSignatures
                      FlexibleContexts FlexibleInstances UndecidableInstances
                      ConstraintKinds StandaloneDeriving TypeSynonymInstances
                      DataKinds PolyKinds TypeOperators
    hs-source-dirs: src
    other-modules:  AUCSP.Utils.Random
                    AUCSP.Utils.List
